# mnemosyne

./: .gitignore  README.md  alembic.ini  pyproject.toml  setup.sh
.claude/: CLAUDE.md  settings.json
.claude/agents/: database-engineer.md  integration-engineer.md  pipeline-engineer.md  product-manager.md  qa-engineer.md  retrieval-engineer.md
.github/workflows/: ci.yml
docs/: agent-memory-design.md  agent-memory-implementation-plan.md
migrations/: env.py
migrations/versions/: 001_create_memory_schema.py  002_create_entity_tables.py
ref_doc/: INTEGRATION.md
rules/core/: budget.yaml  keyword_triggers.yaml  preferences.yaml  sizes.yaml
src/mnemosyne/: __init__.py  errors.py  utils.py
src/mnemosyne/config/: settings.py
src/mnemosyne/context/: assembly.py  token_budget.py
src/mnemosyne/db/models/: entity.py  (+4 more)
src/mnemosyne/embedding/: base.py  fake.py  fastembed.py  google_sdk.py  ollama.py  openai_compatible.py  openai_sdk.py
src/mnemosyne/integration/: hooks.py  prompt_builder.py  save_memory_tool.py
src/mnemosyne/llm/: anthropic_sdk.py  base.py  fake.py  google_sdk.py  openai_compatible.py  openai_sdk.py
src/mnemosyne/pipeline/: consolidation.py  contradiction.py  decay.py  embedding.py  episodes.py  nli.py  reflection.py  runner.py
src/mnemosyne/providers/: base.py  in_memory.py  in_memory_entity_store.py  postgres.py
src/mnemosyne/retrieval/: entity_search.py  scoring.py
src/mnemosyne/rules/: base_extractor.py  rule_loader.py  rule_registry.py  stub.py  yaml_extractor.py
tests/: conftest.py
tests/fixtures/: fake_embedding.py  fake_llm.py  llm_canned_responses.yaml
tests/integration/: test_full_pipeline.py  test_ollama_embedding.py  test_real_llm.py  test_walking_skeleton.py
tests/unit/config/: test_settings.py
tests/unit/context/: test_assembly.py  test_token_budget.py
tests/unit/db/: test_entity_model.py  test_models.py
tests/unit/embedding/: test_embedding_factory.py  test_fastembed.py  test_ollama.py  test_openai_compatible_embedding.py
tests/unit/integration/: test_hooks.py  test_prompt_builder.py  test_save_memory_tool.py
tests/unit/llm/: test_llm_factory.py  test_openai_compatible.py
tests/unit/pipeline/: test_consolidation_worker.py  test_contradiction.py  test_decay_worker.py  test_embedding_worker.py  test_episode_worker.py  test_nli.py  test_orchestrator.py  test_reflection.py  test_router.py  test_runner.py
tests/unit/providers/: test_entity_store.py  test_in_memory_access_count.py  test_in_memory_bitemporal.py  test_in_memory_dedup.py  test_in_memory_user_isolation.py
tests/unit/retrieval/: test_entity_search.py  test_scoring.py
tests/unit/rules/: test_builtin_rules.py  test_rule_loader.py  test_rule_registry.py  test_yaml_extractor.py
(+15 files in other folders)
