[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemosyne"
version = "0.3.0"
description = "General-purpose agent memory module with hybrid extraction and multi-signal retrieval"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "numpy>=1.26",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "python-dotenv>=1.0",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
google = ["google-genai>=1.0"]
fastembed = ["fastembed>=0.3"]
ner = ["spacy>=3.7", "gliner>=0.2"]
nli = ["transformers>=4.40", "sentencepiece"]
all = ["mnemosyne[openai,anthropic,google,fastembed,ner,nli]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
